# test_task

./: CMakeLists.txt
test_task/: CMakeLists.txt  circle.cpp  circle.h  ellipse.cpp  ellipse.h  figure.cpp  figure.h  helix.cpp  helix.h  test_task.cpp  test_task.h
